crates/zeek-websocket-derive/tests/tuple-struct-fail.stderr
error: only structs with named fields can derive ZeekType
 --> tests/tuple-struct-fail.rs:4:1
  |
4 | struct A(u8, u16);
  | ^^^^^^
