crates/zeek-websocket-derive/tests/tuple-struct-fail.rs
use zeek_websocket_derive::ZeekType;

#[derive(ZeekType)]
struct A(u8, u16);

fn main() {}
